dsp-integration/deploy/kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dsp-exchange-api
  namespace: dsp-exchange
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: dsp-exchange-api
  ports:
    - name: http
      port: 80
      targetPort: http
